# pytest_poetry2nix

./: README.md  flake.nix  pyproject.toml
src/myapp/: cli.py
test/: test_hello.py
